--- a/transformasi/daftarsoal.html
+++ b/transformasi/daftarsoal.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script async custom-element="amp-auto-ads"
-        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
-</script>
+    <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WWKYNJM30L"></script>
     <script>
@@ -26,8 +24,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
-    crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971" crossorigin="anonymous"></script>
     <title>Daftar Soal</title>
   </head>
   <body>
@@ -42,10 +39,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/transformasi/">Transformasi</a>
+              <a class="nav-link active" aria-current="page" href="#offcanvasExample" data-bs-toggle="offcanvas" aria-controls="offcanvasExample">Daftar Isi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Soal-soal</a>
+              <a class="nav-link active" aria-current="page" href="/transformasi/">Transformasi</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -67,22 +64,65 @@
       </div>
     </nav>
     <!-- navbar end -->
-<section style="padding-top: 6rem; padding-bottom: 5rem">
-    <div class="container">
+    <!-- ======================================== OFFCANVAS START====================================================== -->
+    <!-- ============================================================================================================== -->
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasExampleLabel">
+          DAFTAR ISI <br />
+          www.mathdosman.site
+        </h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <div>Untuk mempermudah pencarian beberapa materi yang terdapat pada web ini silahkan gunakan link dibawah ini:</div>
+        <ol>
+          <li>
+            <div class="dropdown mt-3">
+              <div class="btn dropdown-toggle d-flex" type="button" data-bs-toggle="dropdown">Matriks</div>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/matriks/pengertian.html">Pengertian Matriks</a></li>
+                <li><a class="dropdown-item" href="/matriks/jenismatriks.html">Jenis-jenis Matriks</a></li>
+                <li><a class="dropdown-item" href="/matriks/tranpose.html">Transpose Matriks</a></li>
+                <li><a class="dropdown-item" href="/matriks/duamatriks.html">Kesamaan Dua Matriks</a></li>
+                <li><a class="dropdown-item" href="/matriks/operasimatriks.html">Penjumlahan dan Pengurangan Matriks</a></li>
+                <li><a class="dropdown-item" href="/matriks/perkalian.html">Perkalian Matriks</a></li>
+                <li><a class="dropdown-item" href="/matriks/invers.html">Invers Matriks</a></li>
+                <li><a class="dropdown-item" href="/matriks/penerapan.html">Penerapan Matriks</a></li>
+                <li><a class="dropdown-item" href="/matriks/soal.html">Kumpulan Soal Latihan Matriks</a></li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div class="dropdown mt-3">
+              <div class="btn dropdown-toggle d-flex" type="button" data-bs-toggle="dropdown">Transformasi Geometri</div>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/transformasi/translasi.html">Translasi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/refleksi.html">Refleksi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/rotasi.html">Rotasi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/dilatasi.html">Dilatasi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/kurva.html">Transformasi suatu Kurva</a></li>
+                <li><a class="dropdown-item" href="/transformasi/kurva.html">Transformasi Komposisi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/kumpulansoal.html">Kumpulan Soal Latihan Transformasi Geometri</a></li>
+              </ul>
+            </div>
+          </li>
+        </ol>
+      </div>
+    </div>
+    <!-- ================================================================= OFFCANVAS END ======================================================================-->
+    <!-- ====================================================================================================================================================== -->
 
-<h3>
-Latihan Soal
-</h3>
-                
+    <section style="padding-top: 6rem; padding-bottom: 5rem">
+      <div class="container">
+        <h3>Latihan Soal</h3>
 
-
-      <div class="d-grid gap-2 d-md-block position-relative">
-        <a href="/transformasi/komposisi.html"> <button class="btn btn-primary position-absolute top-0 start-0" type="button">Komposisi</button></a>
-        <a href="/transformasi/"> <button class="btn btn-primary position-absolute top-0 end-0" type="button">Home Transformasi</button></a>
+        <div class="d-grid gap-2 d-md-block position-relative">
+          <a href="/transformasi/komposisi.html"> <button class="btn btn-primary position-absolute top-0 start-0" type="button">Komposisi</button></a>
+          <a href="/transformasi/"> <button class="btn btn-primary position-absolute top-0 end-0" type="button">Home Transformasi</button></a>
         </div>
-</div>
-</section>
-
+      </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- footer start -->
@@ -96,9 +136,6 @@ Latihan Soal
       </p>
     </footer>
     <!-- footer end -->
-    <amp-auto-ads type="adsense"
-    data-ad-client="ca-pub-4649430696681971">
-</amp-auto-ads>
-
+    <amp-auto-ads type="adsense" data-ad-client="ca-pub-4649430696681971"> </amp-auto-ads>
   </body>
 </html>
