--- a/transformasi/index.html
+++ b/transformasi/index.html
@@ -44,7 +44,7 @@
               <a class="nav-link active" aria-current="page" href="/transformasi/">Transformasi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../daftarisimateri.html">Daftar isi Materi</a>
+              <a class="nav-link active" aria-current="page" href="#offcanvasExample" data-bs-toggle="offcanvas" aria-controls="offcanvasExample">Daftar Isi</a>
             </li>
           </ul>
         </div>
@@ -52,14 +52,63 @@
     </nav>
     <!-- navbar end -->
     <!-- navbar end -->
+<!-- ======================================== OFFCANVAS START====================================================== -->
+<!-- ============================================================================================================== -->
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasExampleLabel">DAFTAR ISI <br> www.mathdosman.site</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <div>
+      Untuk mempermudah pencarian beberapa materi yang terdapat pada web ini silahkan gunakan link dibawah ini:
+    </div>
+    <ol>
+      <li>
+        <div class="dropdown mt-3">
+          <div class="btn dropdown-toggle d-flex" type="button" data-bs-toggle="dropdown">
+            Matriks
+          </div>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/matriks/pengertian.html">Pengertian Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/jenismatriks.html">Jenis-jenis Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/tranpose.html">Transpose Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/duamatriks.html">Kesamaan Dua Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/operasimatriks.html">Penjumlahan dan Pengurangan Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/perkalian.html">Perkalian Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/invers.html">Invers Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/penerapan.html">Penerapan Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/soal.html">Kumpulan Soal Latihan Matriks</a></li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div class="dropdown mt-3">
+          <div class="btn dropdown-toggle d-flex" type="button" data-bs-toggle="dropdown">
+            Transformasi Geometri
+          </div>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/transformasi/translasi.html">Translasi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/refleksi.html">Refleksi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/rotasi.html">Rotasi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/dilatasi.html">Dilatasi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/kurva.html">Transformasi suatu Kurva</a></li>
+                <li><a class="dropdown-item" href="/transformasi/kurva.html">Transformasi Komposisi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/daftarsoal.html">Kumpulan Soal Latihan Transformasi Geometri</a></li>
+          </ul>
+        </div>
+      </li>
+    </ol>
+  </div>
+</div>
+<!-- ================================================================= OFFCANVAS END ======================================================================-->
+<!-- ====================================================================================================================================================== -->
+
         <!-- start materi 1 -->
     <section style="padding-top: 7rem;">
     <div class="container">
      <div class="row text-center">
-      <div class="col">
-            <h3>TRANSFORMASI GEOMETRI</h3>
-      </div>
-     </div>
+      <h3>TRANSFORMASI GEOMETRI</h3>
      <div class="row">
         <div class="col-md-4">
           <div class="text-center">
