--- a/transformasi/komposisi.html
+++ b/transformasi/komposisi.html
@@ -39,12 +39,11 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/transformasi/">Transformasi</a>
+              <a class="nav-link active" aria-current="page" href="#offcanvasExample" data-bs-toggle="offcanvas" aria-controls="offcanvasExample">Daftar Isi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Soal-soal</a>
+              <a class="nav-link active" aria-current="page" href="/transformasi/">Transformasi</a>
             </li>
-
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Sub Materi</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -65,21 +64,72 @@
     </nav>
     <!-- navbar end -->
 
-    <div class="container" style="padding-top: 7rem">
-      <h3>Komposisi Transformasi</h3>
-      <div class="row justify-content-center">
-        <div class="col-sm-9">
-          <ol>
-            <li>Pengertian Komposisi Transformasi</li>
-            <p>
+<!-- ======================================== OFFCANVAS START====================================================== -->
+<!-- ============================================================================================================== -->
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasExampleLabel">DAFTAR ISI <br> www.mathdosman.site</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <div>
+      Untuk mempermudah pencarian beberapa materi yang terdapat pada web ini silahkan gunakan link dibawah ini:
+    </div>
+    <ol>
+      <li>
+        <div class="dropdown mt-3">
+          <div class="btn dropdown-toggle d-flex" type="button" data-bs-toggle="dropdown">
+            Matriks
+          </div>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/matriks/pengertian.html">Pengertian Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/jenismatriks.html">Jenis-jenis Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/tranpose.html">Transpose Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/duamatriks.html">Kesamaan Dua Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/operasimatriks.html">Penjumlahan dan Pengurangan Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/perkalian.html">Perkalian Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/invers.html">Invers Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/penerapan.html">Penerapan Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/soal.html">Kumpulan Soal Latihan Matriks</a></li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div class="dropdown mt-3">
+          <div class="btn dropdown-toggle d-flex" type="button" data-bs-toggle="dropdown">
+            Transformasi Geometri
+          </div>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/transformasi/translasi.html">Translasi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/refleksi.html">Refleksi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/rotasi.html">Rotasi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/dilatasi.html">Dilatasi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/kurva.html">Transformasi suatu Kurva</a></li>
+                <li><a class="dropdown-item" href="/transformasi/kurva.html">Transformasi Komposisi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/daftarsoal.html">Kumpulan Soal Latihan Transformasi Geometri</a></li>
+          </ul>
+        </div>
+      </li>
+    </ol>
+  </div>
+</div>
+<!-- ================================================================= OFFCANVAS END ======================================================================-->
+<!-- ====================================================================================================================================================== -->
+<div class="container" style="padding-top: 7rem">
+<h3>Komposisi Transformasi</h3>
+  <div class="row justify-content-center">
+    <div class="col-sm-9">
+      <ol>
+        <li>Pengertian Komposisi Transformasi</li>
+        <p>
               Materi yang berkaitan materi kali ini adalah komposisi dua fungsi, yaitu \(f \circ g (x)\) artinya sama dengan \(f(g(x))\). Arti komposisi pada fungsi dan pada transformasi adalah sama, sehingga \(T_2 \circ T_1
               (x,y)=T_2(T_1(x,y)) \) artinya \(T_2 \circ T_1 \) artinya \(T_1\) dilanjutkan oleh \(T_2\) seperti terlihat pada skema dibawah ini. <br />
               <img src="/transformasi/img/komposisi1.png" alt="komposisi1" />
               Agar dapat memahami komposisi lebih jauh, perhatikan beberapa contoh soal berikut.
-            </p>
-            <div class="row p-2 justify-content-center">
-              <div class="col-md border">
-                <div class="badge bg-primary text-wrap fs-6" style="width: 8rem"><b> CONTOH 6.1 </b></div>
+        </p>
+          <div class="row p-2 justify-content-center">
+            <div class="col-md border">
+              <div class="badge bg-primary text-wrap fs-6" style="width: 8rem"><b> CONTOH 6.1 </b></div>
                 <br />
                 <p class="fst-italic">Tentukan bayangan titik \(A(2,3)\) jika ditransformasikan dengan \(T_1=\begin{pmatrix} 2 \\ -1 \end{pmatrix}\), kemudian dilanjutkan oleh translasi \(T_2 = \begin{pmatrix} 1\\ 4\end{pmatrix}\).</p>
                 <b>JAWABAN:</b> <br />
@@ -88,20 +138,26 @@
                   \(\begin{align} T_2 \circ T_1 (2,3) &= T_2(T_1(2,3)) \\ &= T_2(2+2, 3-1) \\ &=T_2 (4,2) \\&= (4+1, 2+4) \\ &=(5,6) \end{align}\) <br />
                   Jadi, bayangan titik \(A(2,3)\) adalah \(A'(5,6)\)
                 </p>
-              </div>
-            </div>
-          </ol>
-        </div>
-        <div class="col-md-3">
-          <div class="card text-center" style="width: 18rem">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-        </div>
+      </ol>
+    </div>
+    <div class="col-md-3">
+      <div class="list-group">
+        <a href="../index.html" class="list-group-item list-group-item-action active" aria-current="true">
+        HOME mathdosman.site
+        </a>
+          <a href="/transformasi/translasi.html" class="list-group-item list-group-item-action">Translasi</a>
+          <a href="/transformasi/refleksi.html" class="list-group-item list-group-item-action">Refleksi</a>
+          <a href="/transformasi/rotasi.html" class="list-group-item list-group-item-action">Rotasi</a>
+          <a href="/transformasi/dilatasi.html" class="list-group-item list-group-item-action">Dilatasi</a>
+          <a href="/transformasi/kurva.html" class="list-group-item list-group-item-action">Transformasi suatu Kurva</a>
+          <a href="/transformasi/komposisi.html" class="list-group-item list-group-item-action">Transformasi Komposisi</a>
+          <a href="/transformasi/daftarsoal.html" class="list-group-item list-group-item-action">Kumpulan Latihan Soal</a>
       </div>
+    </div>
+  </div>
+</div>
 <section style="padding-bottom: 5rem;">
       <div class="d-grid gap-2 d-md-block position-relative">
         <a href="/transformasi/kurva.html"> <button class="btn btn-primary position-absolute top-0 start-0" type="button">Transformasi Kurva</button></a>
