--- a/transformasi/kurva.html
+++ b/transformasi/kurva.html
@@ -41,13 +41,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
+           <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#offcanvasExample" data-bs-toggle="offcanvas" aria-controls="offcanvasExample">Daftar Isi</a>
+            </li> 
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/transformasi/">Transformasi</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Soal-soal</a>
-            </li>
-
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Sub Materi</a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -67,12 +66,65 @@
       </div>
     </nav>
     <!-- navbar end -->
+
+<!-- ======================================== OFFCANVAS START====================================================== -->
+<!-- ============================================================================================================== -->
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasExampleLabel">DAFTAR ISI <br> www.mathdosman.site</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <div>
+      Untuk mempermudah pencarian beberapa materi yang terdapat pada web ini silahkan gunakan link dibawah ini:
+    </div>
+    <ol>
+      <li>
+        <div class="dropdown mt-3">
+          <div class="btn dropdown-toggle d-flex" type="button" data-bs-toggle="dropdown">
+            Matriks
+          </div>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/matriks/pengertian.html">Pengertian Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/jenismatriks.html">Jenis-jenis Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/tranpose.html">Transpose Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/duamatriks.html">Kesamaan Dua Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/operasimatriks.html">Penjumlahan dan Pengurangan Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/perkalian.html">Perkalian Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/invers.html">Invers Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/penerapan.html">Penerapan Matriks</a></li>
+            <li><a class="dropdown-item" href="/matriks/soal.html">Kumpulan Soal Latihan Matriks</a></li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div class="dropdown mt-3">
+          <div class="btn dropdown-toggle d-flex" type="button" data-bs-toggle="dropdown">
+            Transformasi Geometri
+          </div>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/transformasi/translasi.html">Translasi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/refleksi.html">Refleksi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/rotasi.html">Rotasi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/dilatasi.html">Dilatasi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/kurva.html">Transformasi suatu Kurva</a></li>
+                <li><a class="dropdown-item" href="/transformasi/kurva.html">Transformasi Komposisi</a></li>
+                <li><a class="dropdown-item" href="/transformasi/daftarsoal.html">Kumpulan Soal Latihan Transformasi Geometri</a></li>
+          </ul>
+        </div>
+      </li>
+    </ol>
+  </div>
+</div>
+<!-- ================================================================= OFFCANVAS END ======================================================================-->
+<!-- ====================================================================================================================================================== -->
+
 <section style="padding-top: 6rem; padding-bottom: 7rem">
     <div class="container">
+      <div class="row">
+        <h3> Transformasi Suatu Kurva </h3>
+        <div class="col-md-9">
 
-<h3>
-Transformasi Suatu Kurva
-</h3>
 <p> Sebelumnya kita hanya mempelajari cara menentukan transformasi suatu titik, sekarang kita akan menentukan transformasi suatu kurva. Jika ingin mencari bayangan suatu kurva yang memiliki persamaan \(y=f(x) \) oleh suatu transfromasi, maka dari transformasi tersebut lebih dahulu kita tentukan \(x\) dan \(y\) dalam bentuk \(x'\) dan \(y'\), kemudian bayangannya diperoleh dengan mensubstitusikan \(x\) dan \(y\) ke \(y=f(x)\) dari transformasi tersebut. 
 </p>
 <div class="row p-2 justify-content-center">
@@ -350,9 +402,22 @@ Jika diperumum lagi untuk suatu kurva bila ditranslasi oleh \(T=\begin{pmatrix} 
   </ol>
   </div>
 </div>
-
-
-
+        </div>
+        <div class="col-md-3">
+            <div class="list-group">
+                <a href="../index.html" class="list-group-item list-group-item-action active" aria-current="true">
+                  HOME mathdosman.site
+                </a>
+                <a href="/transformasi/translasi.html" class="list-group-item list-group-item-action">Translasi</a>
+                <a href="/transformasi/refleksi.html" class="list-group-item list-group-item-action">Refleksi</a>
+                <a href="/transformasi/rotasi.html" class="list-group-item list-group-item-action">Rotasi</a>
+                <a href="/transformasi/dilatasi.html" class="list-group-item list-group-item-action">Dilatasi</a>
+                <a href="/transformasi/kurva.html" class="list-group-item list-group-item-action">Transformasi suatu Kurva</a>
+                <a href="/transformasi/komposisi.html" class="list-group-item list-group-item-action">Transformasi Komposisi</a>
+                <a href="/transformasi/daftarsoal.html" class="list-group-item list-group-item-action">Kumpulan Latihan Soal</a>
+              </div>
+        </div>
+      </div>
 
       <div class="d-grid gap-2 d-md-block position-relative">
         <a href="/transformasi/dilatasi.html"> <button class="btn btn-primary position-absolute top-0 start-0" type="button">Dilatasi</button></a>
