--- a/transformasi/komposisi.html
+++ b/transformasi/komposisi.html
@@ -75,13 +75,12 @@
     <div>
       Untuk mempermudah pencarian beberapa materi yang terdapat pada web ini silahkan gunakan link dibawah ini:
     </div>
-    <ol>
-      <li>
         <div class="dropdown mt-3">
           <div class="btn dropdown-toggle d-flex" type="button" data-bs-toggle="dropdown">
-            Matriks
+           1. Matriks
           </div>
           <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/matriks/">Halaman Awal Matriks</a></li>
             <li><a class="dropdown-item" href="/matriks/pengertian.html">Pengertian Matriks</a></li>
             <li><a class="dropdown-item" href="/matriks/jenismatriks.html">Jenis-jenis Matriks</a></li>
             <li><a class="dropdown-item" href="/matriks/tranpose.html">Transpose Matriks</a></li>
@@ -93,11 +92,10 @@
             <li><a class="dropdown-item" href="/matriks/soal.html">Kumpulan Soal Latihan Matriks</a></li>
           </ul>
         </div>
-      </li>
-      <li>
+
         <div class="dropdown mt-3">
           <div class="btn dropdown-toggle d-flex" type="button" data-bs-toggle="dropdown">
-            Transformasi Geometri
+           2. Transformasi Geometri
           </div>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/transformasi/translasi.html">Translasi</a></li>
@@ -109,8 +107,7 @@
                 <li><a class="dropdown-item" href="/transformasi/daftarsoal.html">Kumpulan Soal Latihan Transformasi Geometri</a></li>
           </ul>
         </div>
-      </li>
-    </ol>
+      
   </div>
 </div>
 <!-- ================================================================= OFFCANVAS END ======================================================================-->
