--- a/transformasi/translasi.html
+++ b/transformasi/translasi.html
@@ -85,6 +85,7 @@
             Matriks
           </div>
           <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/matriks/">Halaman Awal Matriks</a></li>
             <li><a class="dropdown-item" href="/matriks/pengertian.html">Pengertian Matriks</a></li>
             <li><a class="dropdown-item" href="/matriks/jenismatriks.html">Jenis-jenis Matriks</a></li>
             <li><a class="dropdown-item" href="/matriks/tranpose.html">Transpose Matriks</a></li>
@@ -129,7 +130,7 @@
               Translasi adalah suatu transformasi yang memetakan tiap titik pada bidang dengan jarak dan arah tertentu. Jarak dan arah tertentu itu dapat diwakili oleh ruas garis berarah (misalnya \(\overrightarrow{AB } \)) atau oleh suatu
               pasangan terurut \(\begin{pmatrix} a\\b \end{pmatrix}\). Hubungan antara titik dan bayangannya adalah:
               <div class="row justify-content-center">
-              <div class="overflow-auto border border-dark rounded col-md-4 "> $$T=\begin{pmatrix} a\\b \end{pmatrix}:P(x,y) \to P'(x+a, y+b) $$</div></div>
+              <div class="overflow-auto border border-dark rounded col-md-6 "> $$T=\begin{pmatrix} a\\b \end{pmatrix}:P(x,y) \to P'(x+a, y+b) $$</div></div>
             </p>
             Secara matriks dituliskan menjadi seperti berikut.
             $$\begin{pmatrix} x'\\y' \end{pmatrix}=\begin{pmatrix} x\\y \end{pmatrix}+\begin{pmatrix} a\\b \end{pmatrix}=\begin{pmatrix} x+a\\x+b \end{pmatrix}$$
