--- a/matriks/index.html
+++ b/matriks/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script async custom-element="amp-auto-ads"
-        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
-</script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971"
-     crossorigin="anonymous"></script>
+    <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4649430696681971" crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WWKYNJM30L"></script>
     <script>
@@ -74,12 +71,15 @@
     </nav>
     <!-- navbar end -->
     <!-- navbar end -->
-    <section>
+    <section style="padding-top: 7rem">
       <div class="container">
         <div class="row">
+          <h3 class="text-center fw-bold">MATRIKS</h3>
           <div class="col">
             <p>
-              Dalam bidang industri, adakalanya seorang pengusaha dengan alasan efisiensi biaya menempatkan pabrik dan gudang tempat meletakkan hasil produksinya di tempat terpisah. Permasalahan yang timbul adalah bagaimana cara mendistribusikan hasil produksi dari masing-masing pabrik ke masing-masing gudang yang terbesar dan biaya transportasi yang dikeluarkan agar seminimal mungkin. Permasalah tersebut dalam bidang matematika merupakan <i>permasalahan transportasi</i>. Permasalahan transportasi ini dimodelkan menjadi bentuk sistem persamaan linear dan dapat diselesaikan dengan konsep matriks yang akan dipelajari pada bab ini.
+              Dalam bidang industri, adakalanya seorang pengusaha dengan alasan efisiensi biaya menempatkan pabrik dan gudang tempat meletakkan hasil produksinya di tempat terpisah. Permasalahan yang timbul adalah bagaimana cara
+              mendistribusikan hasil produksi dari masing-masing pabrik ke masing-masing gudang yang terbesar dan biaya transportasi yang dikeluarkan agar seminimal mungkin. Permasalah tersebut dalam bidang matematika merupakan
+              <i>permasalahan transportasi</i>. Permasalahan transportasi ini dimodelkan menjadi bentuk sistem persamaan linear dan dapat diselesaikan dengan konsep matriks yang akan dipelajari pada bab ini.
             </p>
           </div>
         </div>
@@ -87,19 +87,19 @@
         <div class="row">
           <div class="col">
             <div class="list-group">
-              <button type="button" class="list-group-item list-group-item-action active text-center" aria-current="true">
-                Cakupan Materi sub Matriks
-              </button>
+              <button type="button" class="list-group-item list-group-item-action active text-center" aria-current="true">Cakupan Materi sub Matriks</button>
               <a href="/matriks/pengertian.html" style="text-decoration: none"><button type="button" class="list-group-item list-group-item-action">Pengertian Matriks</button></a>
               <a href="/matriks/jenismatriks.html" style="text-decoration: none"><button type="button" class="list-group-item list-group-item-action">Jenis-Jenis Matriks</button></a>
               <a href="/matriks/tranpose.html" style="text-decoration: none"><button type="button" class="list-group-item list-group-item-action">Tranpose Matriks</button></a>
               <a href="/matriks/duamatriks.html" style="text-decoration: none"><button type="button" class="list-group-item list-group-item-action">Kesamaan Dua Matriks</button></a>
               <a href="/matriks/operasimatriks.html" style="text-decoration: none"><button type="button" class="list-group-item list-group-item-action">Penjumlahan dan Pengurangan Matriks</button></a>
               <a href="/matriks/perkalian.html" style="text-decoration: none"><button type="button" class="list-group-item list-group-item-action">Perkalian Matriks</button></a>
-              <a href="/matriks/invers.html" style="text-decoration: none" ><button type="button" class="list-group-item list-group-item-action">Invers Matriks</button> </a>
+              <a href="/matriks/invers.html" style="text-decoration: none"><button type="button" class="list-group-item list-group-item-action">Invers Matriks</button> </a>
               <a href="/matriks/penerapan.html" style="text-decoration: none"><button type="button" class="list-group-item list-group-item-action">Penerapan Matriks</button> </a>
               <a href="/matriks/soal.html" style="text-decoration: none"><button type="button" class="list-group-item list-group-item-action">Kumpulan Soal Latihan</button> </a>
-              <a href="/matriks/ulangan/" style="text-decoration: none"><button type="button" class="list-group-item list-group-item-action"><b>ULANGAN HARIAN MATEMATIKA T.A. 2022/2023</b></button> </a>
+              <a href="/matriks/ulangan/" style="text-decoration: none"
+                ><button type="button" class="list-group-item list-group-item-action"><b>ULANGAN HARIAN MATEMATIKA T.A. 2022/2023</b></button>
+              </a>
             </div>
           </div>
         </div>
@@ -119,8 +119,6 @@
     </footer>
     <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <amp-auto-ads type="adsense"
-    data-ad-client="ca-pub-4649430696681971">
-</amp-auto-ads>
+    <amp-auto-ads type="adsense" data-ad-client="ca-pub-4649430696681971"> </amp-auto-ads>
   </body>
 </html>
