--- a/transformasi/daftarsoal.html
+++ b/transformasi/daftarsoal.html
@@ -81,6 +81,7 @@
             <div class="dropdown mt-3">
               <div class="btn dropdown-toggle d-flex" type="button" data-bs-toggle="dropdown">Matriks</div>
               <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/matriks/">Halaman Awal Matriks</a></li>
                 <li><a class="dropdown-item" href="/matriks/pengertian.html">Pengertian Matriks</a></li>
                 <li><a class="dropdown-item" href="/matriks/jenismatriks.html">Jenis-jenis Matriks</a></li>
                 <li><a class="dropdown-item" href="/matriks/tranpose.html">Transpose Matriks</a></li>
