--- a/transformasi/refleksi.html
+++ b/transformasi/refleksi.html
@@ -84,6 +84,7 @@
             Matriks
           </div>
           <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/matriks/">Halaman Awal Matriks</a></li>
             <li><a class="dropdown-item" href="/matriks/pengertian.html">Pengertian Matriks</a></li>
             <li><a class="dropdown-item" href="/matriks/jenismatriks.html">Jenis-jenis Matriks</a></li>
             <li><a class="dropdown-item" href="/matriks/tranpose.html">Transpose Matriks</a></li>
