--- a/matriks/soal/soalmatriks4.html
+++ b/matriks/soal/soalmatriks4.html
@@ -174,7 +174,7 @@
                 10
                 <hr />
                 <!-- =====SOAL NO 6======================================================================= -->
-                <li>Diketahui matriks \(A=\begin{pmatrix}U_1 & U_2 \\ U_3 & U_4 \end{pmatrix}\) dan \(u_n\) adalah suku ke-<i>n</i> barisan aritmatika. Jika \(u_6=18\) dan \(u_10=30\), maka determinan matriks \(A\) sama dengan ... </li>
+                <li>Diketahui matriks \(A=\begin{pmatrix}U_1 & U_2 \\ U_3 & U_4 \end{pmatrix}\) dan \(u_n\) adalah suku ke-<i>n</i> barisan aritmatika. Jika \(u_6=18\) dan \(u_{10}=30\), maka determinan matriks \(A\) sama dengan ... </li>
                 <input type="radio" name="soal6" value="10" id="soal6" />
                 -18
                 <br />
