--- a/transformasi/komposisi.html
+++ b/transformasi/komposisi.html
@@ -115,7 +115,7 @@
 <div class="container" style="padding-top: 7rem">
 <h3>Komposisi Transformasi</h3>
   <div class="row justify-content-center">
-    <div class="col-sm-9">
+    <div class="col-md-9">
       <ol>
         <li>Pengertian Komposisi Transformasi</li>
         <p>
@@ -124,7 +124,7 @@
               <img src="/transformasi/img/komposisi1.png" alt="komposisi1" />
               Agar dapat memahami komposisi lebih jauh, perhatikan beberapa contoh soal berikut.
         </p>
-          <div class="row p-2 justify-content-center">
+          <div class="row pt-2 justify-content-center">
             <div class="col-md border">
               <div class="badge bg-primary text-wrap fs-6" style="width: 8rem"><b> CONTOH 6.1 </b></div>
                 <br />
@@ -137,9 +137,179 @@
                 </p>
             </div>
           </div>
+          <div class="row pt-2 justify-content-center">
+            <div class="col-md border">
+              <div class="badge bg-primary text-wrap fs-6" style="width: 8rem"><b> CONTOH 6.2 </b></div>
+                <br />
+                <p class="fst-italic">Tentukan bayangan titik \(P(1,4)\) jika dicerminkan terhadap garis \(x=3\), kemudian dicerminakan terhadap garis \(y=x\)</p>
+                <b>JAWABAN:</b> <br />
+                <p>
+                  Karena yang melanjutkan adalah pencerminan terhadap garis y=x, maka \(T_{y=x} \) berada di sebelah kiri. <br>
+                  \(\begin{align}
+                    T_{y=x} \circ T_{x=3}(1,4) &= T_{y=x}[T_{x=2}(1,4)] \\
+                    &= T_{y=x}(2(3)-1,4) \\ &= T_{y=x}(5,4) \\ &=(4,5)
+                  \end{align}\) <br>
+                  Jadi, bayangan titik \(P(1,4)\) adalah \(P'(4,5)\).
+                </p>
+            </div>
+          </div>
+          <br>
+          <li>Ekuivalensi komposisi Transformasi</li>
+          Ekuivalensi komposisi transformasi artinya transformasi tunggal yang ekuivalen dengan komposisi dua transformasi. Di sini kita akan mempelajari ekuivalensi komposisi dua transformasi yang sejenis, sedangkan yang tidak sejenis akan kita pelajari selanjutnya.
+          <ol type="a">
+            <li>Komposisi Dua Translasi</li>
+            Seperti yang sudah diketahui jika \(T=\begin{pmatrix}a\\b \end{pmatrix}\), maka : <br>
+            \(T= \begin{pmatrix}a\\b \end{pmatrix} : (x,y) \to (x+a,y+b) \) <br>
+            Jika translasi \(T_1\) dan \(T_2\) masing-masing dinyatakan dengan pasangan bilangan berurutan \(\begin{pmatrix}a_1\\b_1 \end{pmatrix}\) dan \(\begin{pmatrix}a_2\\b_2 \end{pmatrix}\), maka \(T_2 \circ T_1 =\begin{pmatrix}a_1 + a_2\\b_1 + b_2 \end{pmatrix}\) <br>
+            Agar lebih paham bagaimana komposisi dua translasi, perhatikan contoh berikut
+            </ol>
+            <div class="row pt-2 justify-content-center">
+            <div class="col-md border">
+              <div class="badge bg-primary text-wrap fs-6" style="width: 8rem"><b> CONTOH 6.3 </b></div>
+                <br />
+                <p class="fst-italic"> Diketahui translasi \(T_1 = \begin{pmatrix}1\\1 \end{pmatrix} \) dan \( \begin{pmatrix}2\\2 \end{pmatrix}\). Nyatakan \(T_1 \circ T_2 \) sebagai translasi tunggal, kemudian carilah \(T_1 \circ T_2 = (3,-1). \)
+                </p>
+                <b>JAWABAN:</b> <br />
+                <p>
+                  \(T_2 \circ T_1 = T_1+T_2=\begin{pmatrix}1\\1 \end{pmatrix}+\begin{pmatrix}2\\2 \end{pmatrix}=\begin{pmatrix}3\\3 \end{pmatrix}\) <br>
+                  \(T_2 \circ T_1(3,-1)=(3+3, -1+3)=(6,2) \)
+                </p>
+            </div>
+          </div>
+          <br>
+            <ol start="2" type="a">
+            <li>Komposisi Refleksi Terhadap Dua Sumbu Sejajar</li> 
+          Jika \(T_{x=h} \) adalah pencerminan terhadap garis \(x=h\) dan \(T_{x=k}\) adalah pencerminan terhadap garis \(x=k\), maka \(T_{x=k} \circ T_{x=h}=\begin{pmatrix}2(k-h) \\0 \end{pmatrix} \) <br>
+            Agar lebih memahami bagaimana komposisi pencerminan terhadap dua sumbu sejajar perhatikan contoh berikut.
+          </ol>
+            <div class="row pt-2 justify-content-center">
+            <div class="col-md border">
+              <div class="badge bg-primary text-wrap fs-6" style="width: 8rem"><b> CONTOH 6.4 </b></div>
+                <br />
+                <p class="fst-italic">
+                  Tentukan bayangan titik \(P(3,4)\) jika dicerminkan terhadap garis \(x=1\), kemudian dilanjutkan pada pencerninan terhadap garis \(x=4\).
+                </p>
+                <b>JAWABAN:</b> <br />
+                <p>
+                  Karena yang melanjutkan adalah pencerminan terhadap garis \(x=4\), maka \(T_{x=4}\) ditulis disebelah kiri <br>
+                  \(\begin{align} T_{x=4}  \circ  T_{x=1}&=\begin{pmatrix}2(4-1) \\0 \end{pmatrix} \\ &=\begin{pmatrix}6 \\0 \end{pmatrix} \end{align}\) <br>
+                  \(\begin{align} T_{x=4} \circ T_{x=1} &= \begin{pmatrix} 6\\0 \end{pmatrix} \\ (3,4) \to (3+6, 4+0) &=(9,4) \end{align}\) <br>
+                  Jadi, bayangan titik \(P(3,4)\) adalah \(P'(9,4)\).
+                </p>
+            </div>
+          </div>
+          <div class="row pt-2 justify-content-center">
+            <div class="col-md border">
+              <div class="badge bg-primary text-wrap fs-6" style="width: 8rem"><b> CONTOH 6.5 </b></div>
+                <br />
+                <p class="fst-italic">
+                  Tentukan bayangan titik \(P(2,1)\) pada pencerminan berturut-turut terhadap garis \(y=5\) yang kemudian diteruskan pada pencerminan terhadap garis \(y=3\)
+                </p>
+                <b>JAWABAN:</b> <br />
+                <p>
+                  Karena yang melanjutkan adalah pencerminan terhadap garis \(y=3\), maka \(T_{y=3}\) ditulis disebelah kiri <br>
+                  \(\begin{align} T_{y=3}  \circ  T_{y=5}&=\begin{pmatrix}0 \\2(3-5) \end{pmatrix} \\ &=\begin{pmatrix} 0\\-4 \end{pmatrix} \end{align}\) <br>
+                  \(\begin{align} T_{y=3} \circ T_{y=5} &= \begin{pmatrix} 0\\-4 \end{pmatrix} \\ (2,1) \to (2+0, 1-4) &=(2,-3) \end{align}\) <br>
+                  Jadi, bayangan titik \(P(2,1)\) adalah \(P'(2,-3)\).
+                </p>
+            </div>
+          </div>
+<br>
+            <ol start="3" type="a">
+              <li>Komposisi Dua Rotasi Terhadap Pusat yang Sama</li>
+            Jika \(R_{\alpha}\) dan \(R_{\beta}\) berturut-turut menyatakan rotasi sebesar \(\alpha\) dan \(\beta\) dengan pusat \(O\), maka \(R_{\alpha} \circ R_{\beta} = R_{\alpha + \beta} \).
+            Agar lebih memahami bagaimana komposisi dua rotasi terhadap pusat yang sama, perhatikan contoh berikut ini.
+            </ol>
+            <div class="row pt-2 justify-content-center">
+            <div class="col-md border">
+              <div class="badge bg-primary text-wrap fs-6" style="width: 8rem"><b> CONTOH 6.6 </b></div>
+                <br />
+                <p class="fst-italic">
+                  Tentukan bayangan titik \(P(2,4)\) jika diputar berturut-turut \(30^{\circ}\) dan \(60^{\circ} \) dengan pusat \(O\)
+                </p>
+                <b>JAWABAN:</b> <br />
+                <p>
+                  \(R_{60^{\circ}} \circ R_{30^{\circ}}=R_{90^{\circ}}:(2,4) \to (x',y') \) dengan :<br>
+                  \(\begin{align} 
+                  x'&=2 \cos 90^{\circ}-4 \sin 90^{\circ}\\ &= 2.0-4.1 \\&=-4
+                  \end{align}\) <br>
+                  \(\begin{align}  
+                  y'&=2 \sin 90^{\circ} + 4 \cos 90^{\circ}\\ &=2.1 + 4.0 \\ &= 2
+                  \end{align}\) <br>
+                  Jadi, bayangan titik \(P(2,4)\) adalah \(P'(-4,2)\).
+                </p>
+            </div>
+          </div>
+          <br>
+
+            <ol start="4" type="a">
+            <li>Komposisi Refleksi Terhadap Dua Garis yang Sejajar</li>
+            Pencerminan terhadap garis \(g_1\) dan \(g_2\) berturut-turut dinyatakan dengan \(T_{g_{1}} dan T_{g_{2}}\). Jika \(\alpha\) dan \(P(a,b)\) berturut-turut menyatakan sudut dan titik potong antara garis \(g_1\) dan \(g_2\), maka \( T_{g_{1}} \circ T_{g_{2}}=R_{P,2\alpha} \) <br>
+            Agar lebih memahami bagaimana komposisi pencerminan terhadap dua garis yang sejajar, perhatikanlah beberapa contoh soal berikut.
+          </ol>
+          <div class="row pt-2 justify-content-center">
+            <div class="col-md border">
+              <div class="badge bg-primary text-wrap fs-6" style="width: 8rem"><b> CONTOH 6.7 </b></div>
+                <br />
+                <p class="fst-italic">
+                  Jika \(T_X\) menyatakan pencerminan terhadap sumbu-X dan \(T_{y=x}\) menyatakan pencerminan terhadap garis \(y=x\). Tentukan transformasi tunggal yang ekuivalen dengan \(T_X \circ T_{y=x} \)
+                </p>
+                <b>JAWABAN:</b> <br />
+                <p>
+                  Titik potong sumbu-X dan garis \(y=x\) adalah \(O\). Sudut yang dibentuk \(45^{\circ}\). Karena yang pertama adalah pencerminan terhadap garis \(y = x\), berarti arah sudut dari garis \(y=x\) ke sumbu-X adalah arah negatif, dengan demikian: <br>
+                  <img src="/transformasi/img/komposisi2.png" alt="komposisi2"> <br>
+                  \(T_X \circ T_{y=x}=R_{O,2(45^{\circ})}=R_{90^{\circ}} \) <br>
+                  Jika \(\alpha =90^{\circ} \) (kedua garis saling tegak lurus), maka \(T_{g_{2}} \circ T_{g_{1}}=R_{P, 180^{\circ}}=T_{(a,b)} \)
+                </p>
+            </div>
+          </div>
+          <div class="row pt-2 justify-content-center">
+            <div class="col-md border">
+              <div class="badge bg-primary text-wrap fs-6" style="width: 8rem"><b> CONTOH 6.8 </b></div>
+                <br />
+                <p class="fst-italic">
+                  Tentukan bayangan titik \(A(3,6)\) jika dicerminkan terhadap garis \(x=5\) yang kemudian dilanjutkan pada pencerminan terhadap garis \(y=2\)
+                </p>
+                <b>JAWABAN:</b> <br />
+                <p>
+                  Karena garis \(x=5\) dan \(y=2\) berpotongan dititik \((5,2)\) secara tegak lurus, maka: <br>
+                  \(\begin{align} 
+                  T_{y=2} \circ T_{x=5} &=T(5,2) : (3,6) \\ &= (2.5 -3, 2.2-6) \\&= (7,-2)
+                  \end{align}\) <br>
+                  Jadi, bayangan titik \(A(3,6)\) adalah \(A'(7,-2)\)
+                </p>
+            </div>
+          </div>
+          <div class="row pt-2 justify-content-center">
+            <div class="col-md border">
+              <div class="badge bg-primary text-wrap fs-6" style="width: 8rem"><b> CONTOH 6.9 </b></div>
+                <br />
+                <p class="fst-italic">
+                  Tentukan bayangan titik \(A(5,4)\) jika dicerminkan terhadap garis \(y=2x-4\) yang kemudian dilanjutkan pada pencerminan terhadap garis \(y=-\frac{1}{2}x+1\)
+                </p>
+                <b>JAWABAN:</b> <br />
+                <p>
+                  Kedua garis saling tegak lurus dan berpotongan di titik \((2,0)\), dengan demikian: <br>
+                  \(\begin{align} 
+                  T_{y=-\frac{1}{2}x+1} \circ T_{y=2x-4} &=T(2,0) : (5,4) \\ &= (2(2)-5, 2(0)-4) \\&= (-1,-4)
+                  \end{align}\) <br>
+                  Jadi, bayangan titik \(A(5,4)\) adalah \(A'(-1,-4)\)
+                </p>
+            </div>
+          </div>
+
+          <div class="row p-2 justify-content-center">
+                <div class="col-md border">
+                    <div class="badge bg-danger text-wrap fs-6" style="width: 8rem"><b> Evaluasi 1.1 </b></div>
+                    <ol>
+                      <li>Tentukan</li>
+                    </ol>
+                </div>
+          </div>
+<!-- ol luar -->
       </ol>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 d-block pb-1">
       <div class="list-group">
         <a href="../index.html" class="list-group-item list-group-item-action active" aria-current="true">
         HOME mathdosman.site
